--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="css/landing-page.min.css" rel="stylesheet">
+    <link href="css/landing-page.css" rel="stylesheet">
 
   </head>
 
@@ -41,20 +41,9 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+            <h1 class="mb-5">Electall - первая платформа анализа больших данных с искусственным интеллектом</h1>
           </div>
-          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <!--<form>
-              <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-                </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-                </div>
-              </div>
-            </form>-->
-          </div>
+          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto"></div>
         </div>
       </div>
     </header>
@@ -66,27 +55,27 @@
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-screen-desktop m-auto text-primary"></i>
+                <i class="icon-cloud-upload m-auto text-primary"></i>
               </div>
-              <h3>Fully Responsive</h3>
+              <h3>Загрузите данные</h3>
               <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-layers m-auto text-primary"></i>
+                <i class="icon-settings m-auto text-primary"></i>
               </div>
-              <h3>Bootstrap 4 Ready</h3>
+              <h3>Настройте показатели</h3>
               <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-check m-auto text-primary"></i>
+                <i class="icon-chart m-auto text-primary"></i>
               </div>
-              <h3>Easy to Use</h3>
+              <h3>Получите результаты</h3>
               <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
             </div>
           </div>
@@ -100,63 +89,63 @@
       <div class="container-fluid p-0">
           <div class="row no-gutters">
 
-              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background: url('img/bg-showcase-1.jpg') no-repeat; background-position: center center; background-size: contain; background-color: #404040;"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                  <h2>Fully Responsive Design</h2>
+                  <h2>Любые источники данных</h2>
                   <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
               </div>
           </div>
           <div class="row no-gutters">
               <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
               <div class="col-lg-6 my-auto showcase-text">
-                  <h2>Updated For Bootstrap 4</h2>
+                  <h2>Всесторонний анализ</h2>
                   <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
               </div>
           </div>
           <div class="row no-gutters">
               <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                  <h2>Easy to Use &amp; Customize</h2>
+                  <h2>Наглядные результаты</h2>
                   <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
               </div>
           </div>
       </div>
   </section>
       
-      <!-- Icons Grid -->
-      <section class="features-icons bg-light text-center">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-4">
-                      <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                          <div class="features-icons-icon d-flex">
-                              <i class="icon-screen-desktop m-auto text-primary"></i>
-                          </div>
-                          <h3>Fully Responsive</h3>
-                          <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
-                      </div>
-                  </div>
-                  <div class="col-lg-4">
-                      <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                          <div class="features-icons-icon d-flex">
-                              <i class="icon-layers m-auto text-primary"></i>
-                          </div>
-                          <h3>Bootstrap 4 Ready</h3>
-                          <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
-                      </div>
-                  </div>
-                  <div class="col-lg-4">
-                      <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                          <div class="features-icons-icon d-flex">
-                              <i class="icon-check m-auto text-primary"></i>
-                          </div>
-                          <h3>Easy to Use</h3>
-                          <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
+    <!-- Icons Grid -->
+    <section class="features-icons bg-light text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                        <div class="features-icons-icon d-flex">
+                            <i class="icon-clock m-auto text-primary"></i>
+                        </div>
+                        <h3>Экономия времени</h3>
+                        <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                        <div class="features-icons-icon d-flex">
+                            <i class="icon-info m-auto text-primary"></i>
+                        </div>
+                        <h3>Полнота ипоказателей</h3>
+                        <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                        <div class="features-icons-icon d-flex">
+                            <i class="icon-check m-auto text-primary"></i>
+                        </div>
+                        <h3>Легкость и удобство</h3>
+                        <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
   <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
@@ -164,19 +153,17 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+            <h2 class="mb-4">Готовы попробовать? Свяжитесь с нами!</h2>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-                </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-                </div>
+                  <div class="col-12 col-md-9 mb-2 mb-md-0">
+                      <input type="email" class="form-control form-control-lg" placeholder="Введите Ваш email...">
+                  </div>
+                  <div class="col-12 col-md-3">
+                      <button type="submit" class="btn btn-block btn-lg btn-primary">Отправить</button>
+                  </div>
               </div>
-            </form>
           </div>
         </div>
       </div>
