--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <i class="icon-cloud-upload m-auto text-primary"></i>
               </div>
               <h3>Загрузите данные</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              <p class="lead mb-0">Используйте любые источники данных, это просто!</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -67,7 +67,7 @@
                 <i class="icon-settings m-auto text-primary"></i>
               </div>
               <h3>Настройте показатели</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              <p class="lead mb-0">Нет потребности в особых навыках, всё очевидно</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -76,7 +76,7 @@
                 <i class="icon-chart m-auto text-primary"></i>
               </div>
               <h3>Получите результаты</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <p class="lead mb-0">Наглядные графики, диаграммы и гистограммы</p>
             </div>
           </div>
         </div>
@@ -92,21 +92,21 @@
               <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background: url('img/bg-showcase-1.jpg') no-repeat; background-position: center center; background-size: contain; background-color: #404040;"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                   <h2>Любые источники данных</h2>
-                  <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+                  <p class="lead mb-0">Наша платформа достаточно интеллекуальна чтобы обрабатывать данные с лубых источников. Мы разрабатали парсеры для извлечения информации о товарах, ценах и других данных из любых онлайн-источников: интернет-магазинов, сайтов производителей, других каталогов товаров</p>
               </div>
           </div>
           <div class="row no-gutters">
               <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
               <div class="col-lg-6 my-auto showcase-text">
                   <h2>Всесторонний анализ</h2>
-                  <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+                  <p class="lead mb-0">С одной стороны, анализируется наиболее важная часть окружения и идентифицируются вытекающие из этого риск, шансы и требования. С другой стороны, изучаются внутренние условия и устанавливаются сильные и слабые стороны сферы</p>
               </div>
           </div>
           <div class="row no-gutters">
               <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
               <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                   <h2>Наглядные результаты</h2>
-                  <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+                  <p class="lead mb-0">Используем метод факторного анализа с вращением и классификацией, применяемый для анализа многомерных данных, а также метод построения дендрограммы, основанный на кластерном анализе, увеличивающий наглядность результатов</p>
               </div>
           </div>
       </div>
@@ -122,7 +122,7 @@
                             <i class="icon-clock m-auto text-primary"></i>
                         </div>
                         <h3>Экономия времени</h3>
-                        <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                        <p class="lead mb-0">Хороший способ повышения эффективности производства</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -130,8 +130,8 @@
                         <div class="features-icons-icon d-flex">
                             <i class="icon-info m-auto text-primary"></i>
                         </div>
-                        <h3>Полнота ипоказателей</h3>
-                        <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+                        <h3>Полнота показателей</h3>
+                        <p class="lead mb-0">Никакие детали не ускользнут из нашего вида</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -140,7 +140,7 @@
                             <i class="icon-check m-auto text-primary"></i>
                         </div>
                         <h3>Легкость и удобство</h3>
-                        <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                        <p class="lead mb-0">Мы собрали для вас самые удобные инструменты</p>
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
               <ul class="list-inline mb-0">
                   <li class="list-inline-item mr-3">
-                      <p class="text-muted mb-4 mb-lg-0">&copy; Electall 2017. All Rights Reserved.</p>
+                      <p class="text-muted mb-4 mb-lg-0">&copy; Electall 2017. Все права защищены.</p>
                 </li>
               <!--<li class="list-inline-item mr-3">
                 <a href="#">
